﻿feat(repo): 完成前后端性能安全治理并统一质量基线
- 新增请求签名闭环与租户鉴权链路，完善 Token 兼容与安全审计逻辑。
- 优化后端缓存、存储、SSE、日志与 SQL 兼容实现，提升稳定性与可维护性。
- 重构前端请求与上传预览链路，消除高风险实现并统一错误处理与状态流转。
- 统一前后端代码风格与中文注释，收敛 lint/checkstyle 规则并清理无用资产。
- 补充与修复关键测试用例及运维脚本，确保一键启动和质量门禁可执行。
- 更新验证流程并确认前后端质量命令通过（npm run lint:check、mvn checkstyle:check -DskipTests）。